# Team208

./: .gitignore  README.md
code/devel/: .catkin
code/src/qtrosan/: CMakeLists.txt  README.md  mainpage.dox  package.xml
code/src/robot2077_basic/: CMakeLists.txt  README.md  package.xml
code/src/robot2077_listen/: README.md
code/src/robot2077_navigation/: CMakeLists.txt  README.md  package.xml
code/src/robot2077_navigation/launch/: navigation_demo.launch  robot_navigation.launch
code/src/robot2077_navigation/launch/include/: move_base.launch.xml
code/src/robot2077_navigation/src/: navi_move_trans.cpp
code/src/robot2077_slam/: CMakeLists.txt  README.md  package.xml
code/src/wpr_simulation/: README.md
demo_ws/: .gitignore  .ycm_extra_conf.py
demo_ws/devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
demo_ws/src/robot2077_navigation/: CMakeLists.txt  package.xml
doc/: SDP-软件开发计划-Team208.doc  SRS-软件需求规格说明书-Team208.doc
doc/PDSR/: PDSR-项目总结报告-Team208.doc
doc/SDD/: SDD-软件设计说明-Team208 - fjh.doc  SDD-软件设计说明-Team208.doc  SDD-软件设计说明-fjh.doc  SDD-软件设计说明-gld.doc  SDD-软件设计说明-xq.doc  SDD-软件设计说明-yzx.doc  ~$D-软件设计说明-Team208 - fjh.doc  ~$D-软件设计说明-gld.doc  ~$D-软件设计说明-yzx.doc
doc/SDD/dependance/: Navigation-fjh.mdj  design-fjh.mdj  design-xq.mdj  design-yzx.mdj  flowchart-xq.mdj  (+2 more)
doc/SDP/: SDP-软件开发计划-Team208.doc
doc/SRS/: SRS-软件需求规格说明书-Team208.doc  SRS-软件需求规格说明书-fjh.doc  SRS-软件需求规格说明书-gld.doc  SRS-软件需求规格说明书-xq.doc  ~$S-软件需求规格说明书-Team208.doc  ~$S-软件需求规格说明书-fjh.doc
doc/STD/: STD-软件测试说明.doc
meeting/: 04_12.md  04_15.md  04_29.md  05_17.md  README.md
(+215 files in other folders)
